<resources>

    <string name="app_name">ShortcutBar</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_document">Document</string>
    <string name="text_add_more">Add more</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_edit_shortcut_bar">Edit Shortcut Bar</string>
    <string name="text_start_to_use">Start</string>
    <string name="text_guide">Guide</string>
    <string name="text_changelog">Changelog</string>
    <string name="text_title_confirm_leaving">Confirm Leaving</string>
    <string name="text_confirm_leaving">The whole changes just done will be wiped completely. Are your sure to leave this page?</string>
    <string name="text_left_top">Left-Top</string>
    <string name="text_left_center">Left-Center</string>
    <string name="text_left_bottom">Left-Bottom</string>
    <string name="text_right_top">Right-Top</string>
    <string name="text_right_center">Right-Center</string>
    <string name="text_right_bottom">Right-Bottom</string>
    <string name="text_title_confirm_deactivate">Confirm Deactivate</string>
    <string name="text_confirm_deactivate">Deactivate lockscreen in device admininstrator page for this device? Are you sure to deactivate?</string>
    <string name="text_lockscreen">Lockscreen</string>
    <string name="device_admin_label">Shortcut Bar</string>
    <string name="device_admin_description">Lockscreen shortcut in ShorctBar</string>
    <string name="text_wifi">Wifi</string>
    <string name="text_home">Home</string>
    <string name="text_auto_rotate">Auto Rotate</string>
    
    <string name="shortcut_bar_setting">Shortcut Bar Setting</string>
    <string name="shortcut_bar_enable_disable_setting">Shortcut Enable/Disable Setting</string>
    
    <string name="separator_text_general">General</string>
  	<string name="summary_enable_service">Enable/Disable the service</string>
  	<string name="title_enable_service">Enable service</string>
  	
  	<string name="separator_text_shortcut_bar">Shortcut Bar</string>
  	<string name="summary_edit_shortcut_order">Change the shortcut order, delete the shortcut or add shortcut</string>
  	<string name="title_edit_shortcut_order">Edit Shortcut Order</string>
  	<string name="summary_edit_enable_disable">Edit Enable/Disable Home, Add More, Wifi, Shortcut Setting&#8230;</string>
  	<string name="title_edit_enable_disable">Edit Enable/Disable Setting</string>
  	<string name="summary_hide_home">Hide Home Shortcut in the bar</string>
  	<string name="title_hide_home">Hide Home Shortcut</string>
  	<string name="summary_hide_setting_shortcut">Hide the setting shortcut in the bar</string>
  	<string name="title_hide_setting_shortcut">Hide Setting Shortcut</string>
  	<string name="summary_hide_add_more">Hide add more shortcut in the bar</string>
  	<string name="title_hide_add_more">Hide Add More Shortcut</string>
  	<string name="summary_hide_shortcut_text">Hide text under the shortcut</string>
  	<string name="title_hide_shortcut_text">Hide Shortcut Text</string>
  	<string name="summary_hide_lockscreen">Hide Lockscreen shorcut in the bar</string>
  	<string name="title_hide_lockscreen">Hide Lockscreen</string>
  	<string name="summary_activate_lockscreen_admin">Activate Lockscreen in device administrators (Settings > Security > Device administrators)</string>
  	<string name="title_activate_lockscreen_admin">Activate Lockscreen</string>
  	<string name="summary_deactivate_lockscreen_admin">DeActivate Lockscreen in device administrators (Settings > Security > Device administrators)</string>
  	<string name="title_deactivate_lockscreen_admin">DeActivate Lockscreen</string>
  	<string name="summary_hide_wifi">Hide Wifi Shortcut in the bar</string>
  	<string name="title_hide_wifi">Hide Wifi Shortcut</string>
  	<string name="summary_hide_auto_rotate">Hide Auto Rotate Shortcut in the bar</string>
  	<string name="title_hide_auto_rotate">Hide Auto Rotate Shortcut</string>
  	
  	<string name="separator_text_shortcut_bar_appearance">Shorctcut Bar Appearance</string>
  	<string name="summary_default_opacity">66%</string>
  	<string name="title_background_opacity">Background Opacity</string>
  	<string name="summary_indicator_location">Choose the indicator to be located at the left/right x center/top/bottom of view</string>
  	<string name="title_indicator_location">Indicator Location</string>
  	<string name="summary_shortcut_icon_size">Resize the shortcut icon</string>
  	<string name="title_shortcut_icon_size">Shortcut Icon Size</string>
  	<string name="summary_background_color">Change background color</string>
  	<string name="title_background_color">Background Color</string>
  	
  	<string name="separator_text_donate">Donate</string>
  	<string name="summary_donate_me">Donate me! Thank you!</string>
  	<string name="title_donate_me">Donate me</string>
  		
  	<string name="menu_feedback">Feedback</string>
  	<string name="menu_about">About</string>
  	<string name="menu_add">Add</string>

  	<string name="about_summary">Please feel free to send me any feedback ! Enjoy yourself !</string>
  	<string name="about_version">Version:</string>
  	<string name="about_name">HsingChang Chen</string>
  	<string name="about_mail">newman19841231\@gmail.com</string>
  	
  	<string name="text_introdution">Introduction</string>
  	<string name="app_introdution">This is an app for user to access more efficient to 
  	    other application. In some case, you need to look up an unfamiliar keyword while surfing the web. You might go back to
  	    Home and press the widget/shortcut or go back to Home, press All Program list and press the application. Now you can
  	    setup the ShortcutBar once and then just press and hold the icon then slide to right to invoke the shortcut bar
  	    Finally you could access the application you want to use on the fly on your mind. \n\nFollowing the some 
  	    features. \n
  	     + Enable/Disable service on your mind \n
  	     + Hide/Display image with/without text \n
  	     + Modify the order of shortcut \n
  	     + Change background opacity \n
  	     + Hide/Display in-app setting shortcut \n
  	     + Hide/Display Home, Add More, Lockscreen, Wifi Switcher Shortcut</string>
  	<string name="change_log_v_1_dot_0">Firstly release !</string>
  	<string name="change_log_v_1_dot_0_dot_1">+ Shortcut Icon Resize \n+ Indicator Location Relocation \n
  	    + Confirm Dialog while leaving edit mode \n+ UI fine tune</string>
	<string name="change_log_v_1_dot_0_dot_2">+ Downsize the guide image to reduce the apk size</string>
	<string name="change_log_v_1_dot_0_dot_3">+ Lock device via shortcut!!! Now you could lockscreen without hardware key!! 
	    \n+ Fine tune UI for better user experience\n+ Fix Bugs</string>
   	<string name="change_log_v_1_dot_0_dot_4">+ Shortcut bar at RIGHT side
   	    \n+ Update indicator icon and location to avoid app\'s action bar or tab bar\n+ Animation added</string>
	<string name="change_log_v_1_dot_1_dot_0">+ Support Froyo, Gingerbread os version !!!!!!\n+ \'Home\' shortcut added
   	    \n+ Wifi Switcher added\n+ Fix bugs</string>
	<string name="change_log_v_1_dot_1_dot_1">+ Change background color you like \n+ Search in app selector page
   	    \n+ Setting structure reafactor : collect all enable/disable setting in new preference page\n+ Performance tune up</string>
	<string name="change_log_v_1_dot_2_dot_0">+ Add Ads\n+ Drag list in re-order page for better user experience
	    \n+ Search app with ignore case sensitive</string>
    <string name="change_log_v_1_dot_2_dot_1">+ Fix Bug reported by Phil Sabolbora\n+ Add QuickSetting - Auto Rotate</string>
</resources>