<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="8dp"
        android:textSize="30dp"
        android:textColor="@color/DialogTextColor" />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:textColor="@color/DialogTextColor" />

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/about_summary"
        android:textColor="@color/DialogTextColor" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/about_name"
        android:textColor="@color/DialogTextColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_mail"
        android:layout_marginBottom="10dp"
        android:autoLink="email" />
    
</LinearLayout>